BUG FIX #75790 - fixing z-index issue

--- a/tourismaustralia-styleguide/assets/scss/site/modules/_paragraph.scss
+++ b/tourismaustralia-styleguide/assets/scss/site/modules/_paragraph.scss
@@ -53,7 +53,6 @@
 
 // same styles applied for testing with styleguide
 .styleguide .paragraph-article {
-  z-index: 200;
 
   //CMS implementation
   & >  p {
